# CommunityJsExtensionEasyBangumi

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.jsonl  pyproject.toml
.github/workflows/: parse2publish.yaml
extensions/: age.js
src/communityjsextensioneasybangumi/: cli.py  parser_v2.py
