[project]
name = "communityjsextensioneasybangumi"
version = "0.1.0"
description = "纯纯看番官方JS源解析及镜像同步器"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
keywords = ["easybangumi", "extension", "repository"]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
homepage = "https://easybangumi.org"
repository = "https://github.com/easybangumiorg/communityjsextensioneasybangumi"

[project.scripts]
ebjer = "communityjsextensioneasybangumi.cli:main"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.hatch.version]
path = "src/communityjsextensioneasybangumi/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/communityjsextensioneasybangumi"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/pyproject.toml"]
